<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.MenuActivityFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/btn_listen_to_learn"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:layout_gravity="center"
                    android:layout_marginLeft="0dp"
                    android:layout_marginTop="0dp"
                    android:background="@drawable/background_blue"
                    android:text="@string/listen_to_learn"
                    android:textAppearance="@android:style/TextAppearance.Large"
                    android:textColor="@color/text_light"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/shared_target_listen_to_learn"
                    style="@style/AppTheme.IconSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="40dp"
                    android:src="@drawable/circle_24dp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/btn_missing_vowels"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:layout_gravity="center"
                    android:layout_marginLeft="0dp"
                    android:layout_marginTop="0dp"
                    android:background="@drawable/background_green"
                    android:text="@string/missing_vowels"
                    android:textAppearance="@android:style/TextAppearance.Large"
                    android:textColor="@color/text_light"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/shared_target_missing_vowels"
                    style="@style/AppTheme.IconSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="40dp"
                    android:src="@drawable/circle_24dp" />
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/btn_sliding_syllables"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:layout_gravity="center"
                    android:layout_marginLeft="0dp"
                    android:layout_marginTop="0dp"
                    android:background="@drawable/background_red"
                    android:text="@string/sliding_syllables"
                    android:textAppearance="@android:style/TextAppearance.Large"
                    android:textColor="@color/text_light"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/shared_target_sliding_syllables"
                    style="@style/AppTheme.IconSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="40dp"
                    android:src="@drawable/circle_24dp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/btn_forming_words"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:layout_gravity="center"
                    android:layout_marginLeft="0dp"
                    android:layout_marginTop="0dp"
                    android:background="@drawable/background_yellow"
                    android:text="@string/forming_words"
                    android:textAppearance="@android:style/TextAppearance.Large"
                    android:textColor="@color/text_light"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/shared_target_forming_words"
                    style="@style/AppTheme.IconSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="40dp"
                    android:src="@drawable/circle_24dp" />
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/img_hidden_level"
        android:layout_centerInParent="true"
        android:src="@mipmap/ic_launcher" />
</RelativeLayout>
